upload store image

--- a/store/ios/Runner/Info.plist
+++ b/store/ios/Runner/Info.plist
@@ -2,6 +2,12 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+	<key>NSMicrophoneUsageDescription</key>
+	<string>Need permission for microphone</string>
+	<key>NSCameraUsageDescription</key>
+	<string>Need permission ot access camera</string>
+	<key>NSPhotoLibraryUsageDescription</key>
+	<string>Need permission to access photo gallery</string>
 	<key>CFBundleDevelopmentRegion</key>
 	<string>$(DEVELOPMENT_LANGUAGE)</string>
 	<key>CFBundleDisplayName</key>
