--- a/store/pubspec.yaml
+++ b/store/pubspec.yaml
@@ -31,9 +31,11 @@ dependencies:
   cupertino_icons: ^1.0.2
   firebase_auth: ^3.3.4
   firebase_core: ^1.10.6
+  firebase_storage: ^10.2.4
   flutter:
     sdk: flutter
   get: ^4.6.1
+  image_picker: ^0.8.4+4
 
 dev_dependencies:
   flutter_lints: ^1.0.0
