--- a/userapp/pubspec.yaml
+++ b/userapp/pubspec.yaml
@@ -27,17 +27,17 @@ environment:
 # the latest version available on pub.dev. To see which dependencies have newer
 # versions available, run `flutter pub outdated`.
 dependencies:
-  cloud_firestore: ^3.1.5
   carousel_slider: ^4.0.0
+  cloud_firestore: ^3.1.5
   cupertino_icons: ^1.0.2
   firebase_auth: ^3.3.4
   firebase_core: ^1.10.6
   firebase_storage: ^10.2.4
-  image_picker: ^0.8.4+4
-  
   flutter:
     sdk: flutter
   get: ^4.6.1
+  image_picker: ^0.8.4+4
+  intl: ^0.17.0
 
 dev_dependencies:
   flutter_lints: ^1.0.0
