--- a/store/pubspec.yaml
+++ b/store/pubspec.yaml
@@ -36,6 +36,8 @@ dependencies:
     sdk: flutter
   get: ^4.6.1
   image_picker: ^0.8.4+4
+  intl: ^0.17.0
+  url_launcher: ^6.0.17
 
 dev_dependencies:
   flutter_lints: ^1.0.0
