--- a/userapp/pubspec.yaml
+++ b/userapp/pubspec.yaml
@@ -32,6 +32,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   firebase_auth: ^3.3.4
   firebase_core: ^1.10.6
+  firebase_messaging: ^11.2.4
   firebase_storage: ^10.2.4
   flutter:
     sdk: flutter
